--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  equatable: ^1.2.6
-  flutter_bloc: ^6.1.2
-  sqflite: ^1.3.2+3
-  path_provider: 1.6.27
+  equatable: ^2.0.0
+  flutter_bloc: ^7.0.0
+  sqflite: ^2.0.0+3
+  path_provider: 2.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
