--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,19 +18,20 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  equatable: ^2.0.0
-  flutter_bloc: ^7.0.0
+  equatable: ^2.0.3
+  flutter_bloc: ^7.1.0
   sqflite: ^2.0.0+3
-  path_provider: 2.0.1
+  path_provider: 2.0.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.17.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
